[package]
name = "stelarc"
version = "1.3.4"
edition = "2024"
authors = ["Luxuse"]
repository = "https://github.com/Luxuse/stelarc"
license = "Copyright (c) 2025 Luxuse"

[build-dependencies]
winres = "0.1"

[dependencies]
# Interface graphique
egui = "0.31.1"
eframe = "0.31.1"

# Système de fichiers et dialogues
rfd = "0.15.3"

# Audio pour les notifications
rodio = "0.20.1"

# Hashs et CRC
blake3 = "1.5.0"
crc32fast = "1.3.2"
sha2 = "0.10.8"
sha3 = "0.10.8"
md-5 = "0.10.6"

# Sérialisation (optionnel)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"